# Generative_Deep_Learning_2nd_Edition

./: pyproject.toml  setup.py
notebooks/02_deeplearning/01_mlp/: mlp.ipynb
