[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generative_deep_learning"
version = "0.1"
description = "Your project description here"
authors = [
  { name = "Johnny Jarecsni" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]